--- a/figma/SOS/index.html
+++ b/figma/SOS/index.html
@@ -185,12 +185,33 @@
             </div>
         </button>
 
-        <div class="evan reviews">
-            <div class="reviews-name">
+        <div class="evan reviewsSOS">
+            <div class="reviewsSOS-name">
                 Evan Lahti
             </div>
 
-            <div class="reviews-date">
+            <div class="reviewsSOS-subname">
+                PC Gamer
+            </div>
+
+            <div class="reviewsSOS-img">
+                <img src="../SOS/img/image 8.jpg" alt="">
+            </div>
+
+            <div class="reviewsSOS-yellowCircle">
+
+                <!-- <img src="../SOS/img/YellowCircle.svg" alt=""> -->
+            </div>
+
+            <div class="reviewsSOS-social">
+                <img src="../SOS/img/twitter.svg" alt="">
+            </div>
+
+            <div class="reviewsSOS-text">
+                “One of my gaming highlights of the year.”
+            </div>
+
+            <div class="reviewsSOS-date">
                 October 18, 2018
             </div>
         </div>
