--- a/figma/SOS/index.html
+++ b/figma/SOS/index.html
@@ -6,7 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="img/logo.png">
+    <link rel="stylesheet" href="../SOS/css/all.css">
     <link rel="stylesheet" href="../../css/style.css">
+    <!--     <script src="https://kit.fontawesome.com/3cced8357a.js" crossorigin="anonymous"></script> -->
     <title>SOS</title>
 </head>
 
@@ -202,8 +204,8 @@
 
             </div>
 
-            <div class="reviewsSOS-social">
-                <img src="../SOS/img/twitter.svg" alt="">
+            <div class="reviewsSOS-social fab fa-twitter">
+
             </div>
 
             <div class="reviewsSOS-text">
@@ -212,6 +214,66 @@
 
             <div class="reviewsSOS-date">
                 October 18, 2018
+            </div>
+        </div>
+
+        <div class="lada reviewsSOS">
+            <div class="reviewsSOS-name">
+                Jada Griffin
+            </div>
+
+            <div class="reviewsSOS-subname">
+                Nerdreactor
+            </div>
+
+            <div class="reviewsSOS-img">
+                <img src="../SOS/img/image 8.jpg" alt="">
+            </div>
+
+            <div class="reviewsSOS-yellowCircle">
+
+            </div>
+
+            <div class="reviewsSOS-social fab fa-twitter">
+
+            </div>
+
+            <div class="reviewsSOS-text">
+                “The next big thing in the world of streaming and survival games.”
+            </div>
+
+            <div class="reviewsSOS-date">
+                December 21, 2018
+            </div>
+        </div>
+
+        <div class="aaron reviewsSOS">
+            <div class="reviewsSOS-name">
+                Aaron Williams
+            </div>
+
+            <div class="reviewsSOS-subname">
+                Uproxx
+            </div>
+
+            <div class="reviewsSOS-img">
+                <img src="../SOS/img/image 8.jpg" alt="">
+            </div>
+
+            <div class="reviewsSOS-yellowCircle">
+
+            </div>
+
+            <div class="reviewsSOS-social fab fa-twitter">
+
+            </div>
+
+            <div class="reviewsSOS-text">
+                “Snoop Dogg Playing The Wildly Entertaining ‘SOS’ Is Ridiculous.”
+            </div>
+
+            <div class="reviewsSOS-date">
+                December 24, 2018
             </div>
         </div>
 
