--- a/figma/SOS/index.html
+++ b/figma/SOS/index.html
@@ -126,6 +126,31 @@
             </div>
         </div>
 
+        <div class="s3h s3h1">
+            SURVIVE AT ALL COSTS
+        </div>
+        <div class="s3text s3text1">
+            You have 30 minutes to find a relic, signal for extraction, and grab one of three spots on the rescue
+            chopper.
+        </div>
+        <div class="s3h2-full">
+            <div class="s3h s3h2">
+                CREATE ALLIES AND ENEMIES
+            </div>
+            <div class="s3text s3text2">
+                s3text2 s3text2 s3text2 s3text2 s3text2 s3text2 s3text2 s3text2 s3text2 s3text2 s3text2 s3text2 s3text2
+            </div>
+        </div>
+
+        <div class="s3h s3h3">
+            IMPRESS THE AUDIENCE
+        </div>
+
+        <div class="s3text s3text3">
+            s3text2 s3text2 s3text2 s3text2 s3text2 s3text2 s3text2 s3text2 s3text2 s3text2 s3text2 s3text2 s3text2
+        </div>
+
+
 
 
     </section>
