--- a/figma/SOS/index.html
+++ b/figma/SOS/index.html
@@ -111,6 +111,19 @@
                 Making the right decisions could be the difference between life and death.
             </div>
         </div>
+
+        <div class="photo1">
+            <img src="../SOS/img/screenshot-1.jpg" alt="">
+        </div>
+
+        <div class="photo2">
+            <img src="../SOS/img/screenshot-2.jpg" alt="">
+        </div>
+
+        <div class="photo3">
+            <img src="../SOS/img/screenshot-3.jpg" alt="">
+        </div>
+
     </section>
 
     <!-- вёрстка третьего блока -->
