--- a/figma/SOS/index.html
+++ b/figma/SOS/index.html
@@ -124,6 +124,26 @@
             <img src="../SOS/img/screenshot-3.jpg" alt="">
         </div>
 
+        <div class="point1">
+
+        </div>
+
+        <div class="point2">
+
+        </div>
+
+        <div class="point3">
+
+        </div>
+
+        <div class="point4">
+
+        </div>
+
+        <div class="point5">
+
+        </div>
+
     </section>
 
     <!-- вёрстка третьего блока -->
@@ -160,8 +180,10 @@
         </div>
 
         <div class="s3text s3text3">
-            s3text2 s3text2 s3text2 s3text2 s3text2 s3text2 s3text2 s3text2 s3text2 s3text2 s3text2 s3text2 s3text2
+            s3text3 s3text3 s3text3 s3text3 s3text3 s3text3 s3text3 s3text3 s3text3 s3text3 s3text3 s3text3 s3text3
         </div>
+
+
 
 
 
