--- a/figma/SOS/index.html
+++ b/figma/SOS/index.html
@@ -146,7 +146,7 @@
 
     </section>
 
-    <!-- вёрстка третьего блока -->
+    <!--  вёрстка третьего блока
     <section class="SectionThree" style="background-image: url(../../figma/SOS/img/Group.jpg); background-size:cover">
         <div class="S3-h1up">
             <div class="S3-h1up-text">
@@ -183,10 +183,50 @@
             s3text3 s3text3 s3text3 s3text3 s3text3 s3text3 s3text3 s3text3 s3text3 s3text3 s3text3 s3text3 s3text3
         </div>
 
+    </section> -->
 
 
+    <!-- вёрстка третьего блока -->
+    <section class="SectionThree" style="background-image: url(../../figma/SOS/img/Group.jpg); background-size:cover">
+        <div class="S3-h1up">
+            <div class="S3-h1up-text">
+                What’s so special?
+            </div>
+        </div>
+        <div class="S3-h1main">
+            <div class="S3-h1main-text">
+                features
+            </div>
+        </div>
 
+        <div class="s3block1">
+            <div class="s3h1">
+                SURVIVE AT ALL COSTS
+            </div>
+            <div class="s3text1">
+                You have 30 minutes to find a relic, signal for extraction, and grab one of three spots on the rescue
+                chopper.
+            </div>
+        </div>
 
+        <div class="s3block2">
+            <div class="s3h2">
+                CREATE ALLIES AND ENEMIES
+            </div>
+            <div class="s3text2">
+                s3text2 s3text2 s3text2 s3text2 s3text2 s3text2 s3text2 s3text2 s3text2 s3text2 s3text2 s3text2 s3text2
+            </div>
+        </div>
+
+        <div class="s3block3">
+            <div class="s3h3">
+                IMPRESS THE AUDIENCE
+            </div>
+
+            <div class="s3text3">
+                s3text3 s3text3 s3text3 s3text3 s3text3 s3text3 s3text3 s3text3 s3text3 s3text3 s3text3 s3text3 s3text3
+            </div>
+        </div>
 
     </section>
 
