--- a/figma/SOS/index.html
+++ b/figma/SOS/index.html
@@ -446,11 +446,7 @@
             </div>
         </div>
 
-        <button class="button-subscribe">
-            <div class="button-subscribe-text">
-                Subscribe now
-            </div>
-        </button>
+        <button class="ButtonSubscribe"></button>
 
         <footer>
             <div class="footer-under">
@@ -464,6 +460,11 @@
         </footer>
 
     </section>
+
+    <script src="https://unpkg.com/react@16/umd/react.development.js" crossorigin></script>
+    <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js" crossorigin></script>
+
+    <script src="../SOS/js/button-subscribe.js"></script>
 
 </body>
 
