--- a/figma/SOS/index.html
+++ b/figma/SOS/index.html
@@ -19,7 +19,7 @@
             <header>
                 <div class="header-inner">
                     <div class="logo">
-                        <img src="img/logo.png" alt="">
+                        <img src="img/logo-1.png" alt="">
                     </div>
                     <div class="menu-inner">
                         <div class="submenu-main">
@@ -443,16 +443,48 @@
 
         <button class="ButtonSubscribe"></button>
 
-        <footer>
-            <div class="footer-under">
-                <div class="rights-text">
-                    © 2018 Outpost Games, Inc. All Rights Reserved
-                </div>
-                <div class="under-menu">
+        <footer class="footer-wrapper">
+            <div class="footer-wrapper-inner">
+                <div class="footer-up">
+                    <div class="footer-up-img">
+                        <img src="../SOS/img/logo-1.png" alt="">
+                    </div>
 
+
+                    <div class="footer-up-imgs">
+                        <img src="../SOS/img/facebook.svg" alt="">
+                        <img src="../SOS/img/twitter-1.svg" alt="">
+                        <img src="../SOS/img/Youtube-1.svg" alt="">
+                        <img src="../SOS/img/twitch-1.svg" alt="">
+                    </div>
+                </div>
+
+                <!--             <div class="footer-menu">
+                                                        <a href="#">Main</a>
+                                                        <a href="#">About</a>
+                                                        <a href="#">Game features</a>
+                                                        <a href="#">System requirements</a>
+                                                        <a href="#">quotes</a>
+                                                    </div> -->
+
+
+                <div class="footer-under">
+                    <div class="rights-text">
+                        © 2018 Outpost Games, Inc. All Rights Reserved
+                    </div>
+                    <div class="under-menu">
+                        <a href="#">Privacy Policy</a>
+                        <a href="#">Terms of Services</a>
+                        <a href="#">Code of Conduct</a>
+                    </div>
                 </div>
             </div>
         </footer>
+
+
+
+
+
 
     </section>
 
