--- a/figma/SOS/index.html
+++ b/figma/SOS/index.html
@@ -451,12 +451,29 @@
                     </div>
 
 
-                    <div class="footer-up-imgs">
-                        <img src="../SOS/img/facebook.svg" alt="">
-                        <img src="../SOS/img/twitter-1.svg" alt="">
-                        <img src="../SOS/img/Youtube-1.svg" alt="">
-                        <img src="../SOS/img/twitch-1.svg" alt="">
+                    <div class="footer-menu">
+                        <a href="#">Main</a>
+                        <a href="#">About</a>
+                        <a href="#">Game features</a>
+                        <a href="#">System requirements</a>
+                        <a href="#">quotes</a>
                     </div>
+
+
+                    <div class="footer-up-imgs">
+                        <i class="fab fa-facebook-f"></i>
+                        <i class="fab fa-twitter"></i>
+                        <i class="fab fa-youtube"></i>
+                        <i class="fab fa-twitch"></i>
+                    </div>
+                </div>
+
+                <div class="footer-line-long">
+
+                </div>
+
+                <div class="footer-center">
+
                 </div>
 
                 <!--             <div class="footer-menu">
@@ -474,10 +491,13 @@
                     </div>
                     <div class="under-menu">
                         <a href="#">Privacy Policy</a>
+                        <div class="footer-line-short"></div>
                         <a href="#">Terms of Services</a>
+                        <div class="footer-line-short"></div>
                         <a href="#">Code of Conduct</a>
                     </div>
                 </div>
+
             </div>
         </footer>
 
