--- a/index.html
+++ b/index.html
@@ -165,8 +165,8 @@
 
 
                     <div class="product__item mix category-desk" data-order="4">
-                        <a class="product__item-img" href="/figma/SOS/index.html"
-                            style="background-image: url(/figma/SOS/img/SOS-layout.png); background-size:contain"></a>
+                        <a class="product__item-img" href="figma/SOS/index.html"
+                            style="background-image: url(figma/SOS/img/SOS-layout.png); background-size:contain"></a>
                     </div>
 
 
