--- a/figma/SOS/index.html
+++ b/figma/SOS/index.html
@@ -461,10 +461,10 @@
 
 
                     <div class="footer-up-imgs">
-                        <i class="fab fa-facebook-f"></i>
-                        <i class="fab fa-twitter"></i>
-                        <i class="fab fa-youtube"></i>
-                        <i class="fab fa-twitch"></i>
+                        <a href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook-f"></i></a>
+                        <a href="https://twitter.com/" target="_blank"><i class="fab fa-twitter"></i></a>
+                        <a href="https://www.youtube.com/" target="_blank"><i class="fab fa-youtube"></i></a>
+                        <a href="https://www.twitch.tv/" target="_blank"><i class="fab fa-twitch"></i></a>
                     </div>
                 </div>
 
@@ -475,14 +475,6 @@
                 <div class="footer-center">
 
                 </div>
-
-                <!--             <div class="footer-menu">
-                                                        <a href="#">Main</a>
-                                                        <a href="#">About</a>
-                                                        <a href="#">Game features</a>
-                                                        <a href="#">System requirements</a>
-                                                        <a href="#">quotes</a>
-                                                    </div> -->
 
 
                 <div class="footer-under">
