--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
     <!--ВЁРСТКА БЛОКА С ИГРАМИ-->
     <section class="games">
         <div class="container">
-            <h3 class="title-main-middle">Играй и выигрывай</h3>
+            <h3 class="title-main-middle">Приложения и макеты</h3>
 
             <div class="products_inner">
                 <div class="products__inner-btn">
