--- a/figma/ZEN/index.html
+++ b/figma/ZEN/index.html
@@ -5,11 +5,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>ZEN</title>
 </head>
 
 <body>
+    <header class="header-wrapper">
+        <div class="header-img">
+            <div class="header-img-Fill">
+                <img src="../ZEN/img/Fill-7.png" alt="">
+            </div>
 
+            <div class="header-img-mastercard">
+                <img src="../ZEN/img/Mastercard-Logo.png" alt="">
+            </div>
+
+        </div>
+    </header>
 </body>
 
 </html>
