--- a/figma/ZEN/index.html
+++ b/figma/ZEN/index.html
@@ -5,22 +5,120 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../SOS/css/all.css">
+    <link rel="stylesheet" href="../../css/style.css">
     <title>ZEN</title>
 </head>
 
 <body>
-    <header class="header-wrapper">
-        <div class="header-img">
-            <div class="header-img-Fill">
-                <img src="../ZEN/img/Fill-7.png" alt="">
+    <div class="containerZEN">
+        <header class="headerZEN">
+
+            <div class="headerZEN-LEFT">
+                <div class="headerZEN-LEFT-img">
+                    <div class="headerZEN-LEFT-img-Fill">
+                        <img src="../ZEN/img/Fill-7.png" alt="">
+                    </div>
+                    <div class="headerZEN-LEFT-img-mastercard">
+                        <img src="../ZEN/img/Mastercard-Logo.png" alt="">
+                    </div>
+                </div>
+
+                <div class="headerZEN-LEFT-link">
+                    <a href="#">Personal</a>
+                    <a href="#">Business</a>
+                </div>
+
             </div>
 
-            <div class="header-img-mastercard">
-                <img src="../ZEN/img/Mastercard-Logo.png" alt="">
+
+            <div class="headerZEN-RIGHT">
+
+                <div class="headerZEN-RIGHT-link">
+                    <a href="#">Zenefits</a>
+                    <a href="#">Features</a>
+                    <a href="#">Pricing</a>
+                </div>
+
+                <div class="headerZEN-RIGHT-button">
+                    <div class="headerZEN-RIGHT-button-text">
+                        Get app
+                    </div>
+                </div>
+
             </div>
+
+        </header>
+    </div>
+
+    <div class="containerZEN">
+        <div class="sectionZEN1">
+            <div class="sectionZEN1-left">
+                <div class="sectionZEN1-left-textUp">
+                    <i class="far fa-play-circle"></i>
+                    In every beginning, there is chaos.
+                </div>
+                <div class="sectionZEN1-left-h1">
+                    <div class="sectionZEN1-left-h1-1">
+                        Peaceful shopping.
+                    </div>
+
+                    <div class="sectionZEN1-left-h1-2">
+                        Mindful money.
+                    </div>
+
+                </div>
+
+                <div class="sectionZEN1-left-textUnder">
+                    See how we can help with making your shopping experience and money management more ZEN.
+                </div>
+                <div class="sectionZEN1-left-buttonApps">
+                    <div class="sectionZEN1-left-buttonApps-AppStore">
+                        <img src="../ZEN/img/AppStore.png" alt="">
+                    </div>
+                    <div class="sectionZEN1-left-buttonApps-GooglePlay">
+                        <img src="../ZEN/img/GoolgePlayNorm.svg" alt="">
+                    </div>
+                </div>
+            </div>
+            <div class="sectionZEN1-right">
+                <img src="../ZEN/img/section1.png" alt="">
+            </div>
+        </div>
+
+        <div class="sectionZEN1">
+            <div class="sectionZEN1-left">
+                <img src="../ZEN/img/section2.png" alt="">
+            </div>
+
+            <div class="sectionZEN1-right">
+                <div class="sectionZEN1-right-h1">
+                    1-year warranty boost
+                </div>
+                <div class="sectionZEN1-right-text">
+                    <div class="sectionZEN1-right-text-1">
+                        ZEN cards have a very neat feature that will help you whenever your electronic devices start
+                        failing after the standard
+                        warranty ends, which is pretty common.
+                    </div>
+
+                    <div class="sectionZEN1-right-text-2">
+                        When you buy any electronics with your ZEN shopping Mastercard®, their warranty gets extended by
+                        one year. How does it
+                        work? It simply does. Automatically.
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="sectionZEN1">
 
         </div>
-    </header>
+
+    </div>
+
+
+
 </body>
 
 </html>
