--- a/figma/ZEN/index.html
+++ b/figma/ZEN/index.html
@@ -91,18 +91,18 @@
                 <img src="../ZEN/img/section2.png" alt="">
             </div>
 
-            <div class="sectionZEN1-right">
-                <div class="sectionZEN1-right-h1">
+            <div class="sectionZEN2-right">
+                <div class="sectionZEN2-right-h1">
                     1-year warranty boost
                 </div>
-                <div class="sectionZEN1-right-text">
-                    <div class="sectionZEN1-right-text-1">
+                <div class="sectionZEN2-right-text">
+                    <div class="sectionZEN2-right-text-1">
                         ZEN cards have a very neat feature that will help you whenever your electronic devices start
                         failing after the standard
                         warranty ends, which is pretty common.
                     </div>
 
-                    <div class="sectionZEN1-right-text-2">
+                    <div class="sectionZEN2-right-text-2">
                         When you buy any electronics with your ZEN shopping Mastercard®, their warranty gets extended by
                         one year. How does it
                         work? It simply does. Automatically.
@@ -111,8 +111,50 @@
             </div>
         </div>
 
-        <div class="sectionZEN1">
+        <div class="sectionZEN3">
+            <div class="sectionZEN3-left">
+                <div class="sectionZEN3-left-h1">
+                    ZEN Care
+                </div>
+                <div class="sectionZEN3-left-text1">
+                    Shopping online is usually a delightful experience. Until it's not.
+                </div>
+                <div class="sectionZEN3-left-text2">
+                    Until something you buy, proves to be faulty, missing or a totally wrong item, you’re in for long
+                    product return
+                    procedures.
+                </div>
+                <div class="sectionZEN3-left-text3">
+                    But, here comes ZEN Care: a free, built-in shopping protection. You can rest assured we’ll handle
+                    all of the
+                    transaction-related problems faster and with higher success rates. Where lone consumers can be
+                    ignored or dumped by
+                    dishonest merchants, ZEN doesn't get discouraged. ZEN persists.
+                </div>
+            </div>
+            <div class="sectionZEN3-right">
+                <img src="../ZEN/img/section3.png" alt="">
+            </div>
+        </div>
+        <div class="sectionZEN-Cashbask">
+            <div class="sectionZEN-Cashbask-h1">
+                and cashback!
+            </div>
+            <div class="sectionZEN-Cashbask-text">
+                It saves a little bit of money while you’re shopping, but in many cases it takes ages to get anything
+                out of it. We gave
+                it a thought and made cashback way more friendly. Up to 14% of what you spend using ZEN Mastercard ®
+                will materialize on
+                your account right after the purchase. It's like you haggled some cash, despite you didn't have to. Just
+                don't forget to
+                use in-app cashback link.
+            </div>
 
+            <div class="sectionZEN-Cashbask-button">
+                <div class="sectionZEN-Cashbask-button-text">
+                    Show more partners
+                </div>
+            </div>
         </div>
 
     </div>
