--- a/index.html
+++ b/index.html
@@ -171,8 +171,8 @@
 
 
                     <div class="product__item mix category-logical" data-order="5">
-                        <a class="product__item-img" href="html/GamesOne/GameOne.html"
-                            style="background-image: url(img/main/article3.png)"></a>
+                        <a class="product__item-img" href="figma/ZEN/index.html"
+                            style="background-image: url(figma/ZEN/img/ZEN-layout.png); background-size:contain"></a>
                     </div>
 
                     <div class="product__item mix category-logical" data-order="6">
