--- a/figma/ZEN/index.html
+++ b/figma/ZEN/index.html
@@ -157,29 +157,32 @@
             </div>
         </div>
 
-        <div class="company">
-            <div class="company-png">
+        <div class="company1">
+            <div class="company1-png">
                 <img src="../ZEN/img/company/Booking.png" alt="">
             </div>
-            <div class="company-png">
+            <div class="company1-png">
                 <img src="../ZEN/img/company/AliExpress.png" alt="">
             </div>
-            <div class="company-png">
+            <div class="company1-png">
                 <img src="../ZEN/img/company/Allegro.png" alt="">
             </div>
-            <div class="company-png">
+            <div class="company1-png">
                 <img src="../ZEN/img/company/Zalando-lounge.png" alt="">
             </div>
-            <div class="company-png">
+        </div>
+
+        <div class="company2">
+            <div class="company2-png">
                 <img src="../ZEN/img/company/Lidl.png" alt="">
             </div>
-            <div class="company-png">
+            <div class="company2-png">
                 <img src="../ZEN/img/company/MadiaMarkt.png" alt="">
             </div>
-            <div class="company-png">
+            <div class="company2-png">
                 <img src="../ZEN/img/company/RTV-evro-AGD.png" alt="">
             </div>
-            <div class="company-png">
+            <div class="company2-png">
                 <img src="../ZEN/img/company/Groupon.png" alt="">
             </div>
         </div>
