--- a/figma/SOS/index.html
+++ b/figma/SOS/index.html
@@ -23,34 +23,37 @@
                     </div>
                     <div class="menu-inner">
                         <div class="submenu-main">
-                            main
-                        </div>
-                        <div class="submenu-main">
-                            about
-                        </div>
-                        <div class="submenu-main">
-                            game features
-                        </div>
-                        <div class="submenu-main">
-                            system requirements
-                        </div>
-                        <div class="submenu-main">
-                            quotes
+                            <a href="#">main</a>
+                            <a href="#">about</a>
+                            <a href="#">game features</a>
+                            <a href="#">system requirements</a>
+                            <a href="#">quotes</a>
                         </div>
                     </div>
                     <div class="buttons">
                         <div class="language">
-                            eng
+                            <div class="language-text">
+                                eng
+                            </div>
+                            <div class="language-arrow">
+                                <i class="fas fa-chevron-down"></i>
+                                <!-- <img src="../SOS/img/language-arrow.svg" alt=""> -->
+                            </div>
                         </div>
                         <div class="separator">
                             <img src="img/separator1.svg" alt="">
                         </div>
-                        <div class="logo-Xbox">
-                            <img src="img/xbox-icon.svg" alt="">
+
+                        <div class="GamePlatform">
+
+                            <div class="logo-Xbox">
+                                <img src="img/xbox-icon.svg" alt="">
+                            </div>
+                            <div class="logo-steam">
+                                <img src="img/steam-icon.svg" alt="">
+                            </div>
                         </div>
-                        <div class="logo-steam">
-                            <img src="img/steam-icon.svg" alt="">
-                        </div>
+
                     </div>
 
                 </div>
@@ -113,15 +116,19 @@
         </div>
 
         <div class="photo1">
-            <img src="../SOS/img/screenshot-1.jpg" alt="">
+            <img id="imgSwitch-1" src="../SOS/img/screenshot-1.jpg" onClick="imgSwitch1(); imgSwitch2();">
         </div>
 
         <div class="photo2">
-            <img src="../SOS/img/screenshot-2.jpg" alt="">
+            <img id="imgSwitch-2" src="../SOS/img/screenshot-2.jpg" onClick="imgSwitch2(); imgSwitch1();">
         </div>
 
         <div class="photo3">
-            <img src="../SOS/img/screenshot-3.jpg" alt="">
+            <img id="imgSwitch-3" src="../SOS/img/screenshot-3.jpg" onClick="imgSwitch3();">
+        </div>
+
+        <div class="switch-img" onClick="imgSwitch1(); imgSwitch2();">
+            <img src="../SOS/img/switch-img.svg" alt="">
         </div>
 
         <div class="point1">
@@ -146,44 +153,6 @@
 
     </section>
 
-    <!--  вёрстка третьего блока
-    <section class="SectionThree" style="background-image: url(../../figma/SOS/img/Group.jpg); background-size:cover">
-        <div class="S3-h1up">
-            <div class="S3-h1up-text">
-                What’s so special?
-            </div>
-        </div>
-        <div class="S3-h1main">
-            <div class="S3-h1main-text">
-                features
-            </div>
-        </div>
-
-        <div class="s3h s3h1">
-            SURVIVE AT ALL COSTS
-        </div>
-        <div class="s3text s3text1">
-            You have 30 minutes to find a relic, signal for extraction, and grab one of three spots on the rescue
-            chopper.
-        </div>
-        <div class="s3h2-full">
-            <div class="s3h s3h2">
-                CREATE ALLIES AND ENEMIES
-            </div>
-            <div class="s3text s3text2">
-                s3text2 s3text2 s3text2 s3text2 s3text2 s3text2 s3text2 s3text2 s3text2 s3text2 s3text2 s3text2 s3text2
-            </div>
-        </div>
-
-        <div class="s3h s3h3">
-            IMPRESS THE AUDIENCE
-        </div>
-
-        <div class="s3text s3text3">
-            s3text3 s3text3 s3text3 s3text3 s3text3 s3text3 s3text3 s3text3 s3text3 s3text3 s3text3 s3text3 s3text3
-        </div>
-
-    </section> -->
 
 
     <!-- вёрстка третьего блока -->
@@ -499,6 +468,42 @@
     <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js" crossorigin></script>
 
     <script src="../SOS/js/button-subscribe.js"></script>
+    <!-- <script src="../SOS/js/switch-img.js"></script> -->
+
+    <script>
+        var i = 0;
+        var image = document.getElementById("imgSwitch-1");
+        var imgs = new Array('../SOS/img/screenshot-1.jpg', '../SOS/img/screenshot-2.jpg', '../SOS/img/screenshot-3.jpg');
+        function imgSwitch1() {
+            i++;
+            i %= imgs.length;
+            image.src = imgs[i];
+        }
+    </script>
+
+    <script>
+        var i = 0;
+        var image2 = document.getElementById("imgSwitch-2");
+        var imgs2 = new Array('../SOS/img/screenshot-2.jpg', '../SOS/img/screenshot-3.jpg', '../SOS/img/screenshot-1.jpg');
+        function imgSwitch2() {
+            i++;
+            i %= imgs2.length;
+            i == 0
+            image2.src = imgs2[i];
+        }
+    </script>
+
+    <script>
+        var i = 0;
+        var image3 = document.getElementById("imgSwitch-3");
+        var imgs3 = new Array('../SOS/img/screenshot-3.jpg', '../SOS/img/screenshot-1.jpg', '../SOS/img/screenshot-2.jpg', '../SOS/img/screenshot-3.jpg');
+        function imgSwitch3() {
+            i++;
+            i %= imgs3.length;
+            image3.src = imgs3[i];
+        }
+    </script>
+
 
 </body>
 
