--- a/figma/SOS/index.html
+++ b/figma/SOS/index.html
@@ -40,6 +40,13 @@
                                 <!-- <img src="../SOS/img/language-arrow.svg" alt=""> -->
                             </div>
                         </div>
+
+                        <div class="language-menu">
+                            <li>rus</li>
+                            <li>fra</li>
+                            <li>deu</li>
+                        </div>
+
                         <div class="separator">
                             <img src="img/separator1.svg" alt="">
                         </div>
