--- a/figma/ZEN/index.html
+++ b/figma/ZEN/index.html
@@ -74,10 +74,11 @@
                 </div>
                 <div class="sectionZEN1-left-buttonApps">
                     <div class="sectionZEN1-left-buttonApps-AppStore">
-                        <img src="../ZEN/img/AppStore.png" alt="">
+                        <a href="https://www.apple.com/app-store/"><img src="../ZEN/img/AppStore(figma).png" alt=""></a>
                     </div>
                     <div class="sectionZEN1-left-buttonApps-GooglePlay">
-                        <img src="../ZEN/img/GoolgePlayNorm.svg" alt="">
+                        <a href="https://play.google.com/store"><img src="../ZEN/img/GoolgePlay(figma).png" alt=""></a>
+
                     </div>
                 </div>
             </div>
@@ -152,7 +153,7 @@
 
             <div class="sectionZEN-Cashbask-button">
                 <div class="sectionZEN-Cashbask-button-text">
-                    Show more partners
+                    <a href="">Show more partners</a>
                 </div>
             </div>
         </div>
