--- a/figma/ZEN/index.html
+++ b/figma/ZEN/index.html
@@ -158,35 +158,36 @@
             </div>
         </div>
 
-        <div class="company1">
-            <div class="company1-png">
-                <img src="../ZEN/img/company/Booking.png" alt="">
-            </div>
-            <div class="company1-png">
-                <img src="../ZEN/img/company/AliExpress.png" alt="">
-            </div>
-            <div class="company1-png">
-                <img src="../ZEN/img/company/Allegro.png" alt="">
-            </div>
-            <div class="company1-png">
-                <img src="../ZEN/img/company/Zalando-lounge.png" alt="">
+
+        <div class="company">
+            <div class="company-all">
+                <div class="company-png">
+                    <img src="../ZEN/img/company/Booking.png" alt="">
+                </div>
+                <div class="company-png">
+                    <img src="../ZEN/img/company/AliExpress.png" alt="">
+                </div>
+                <div class="company-png">
+                    <img src="../ZEN/img/company/Allegro.png" alt="">
+                </div>
+                <div class="company-png">
+                    <img src="../ZEN/img/company/Zalando-lounge.png" alt="">
+                </div>
+                <div class="company-png">
+                    <img src="../ZEN/img/company/Lidl.png" alt="">
+                </div>
+                <div class="company-png">
+                    <img src="../ZEN/img/company/MadiaMarkt.png" alt="">
+                </div>
+                <div class="company-png">
+                    <img src="../ZEN/img/company/RTV-evro-AGD.png" alt="">
+                </div>
+                <div class="company-png">
+                    <img src="../ZEN/img/company/Groupon.png" alt="">
+                </div>
             </div>
         </div>
 
-        <div class="company2">
-            <div class="company2-png">
-                <img src="../ZEN/img/company/Lidl.png" alt="">
-            </div>
-            <div class="company2-png">
-                <img src="../ZEN/img/company/MadiaMarkt.png" alt="">
-            </div>
-            <div class="company2-png">
-                <img src="../ZEN/img/company/RTV-evro-AGD.png" alt="">
-            </div>
-            <div class="company2-png">
-                <img src="../ZEN/img/company/Groupon.png" alt="">
-            </div>
-        </div>
 
     </div>
 
