--- a/figma/ZEN/index.html
+++ b/figma/ZEN/index.html
@@ -188,6 +188,115 @@
             </div>
         </div>
 
+        <div class="section-common">
+            <div class="section-common-text">
+                <div class="section-common-text-h1">
+                    ZEN shopping Mastercard
+                </div>
+                <div class="section-common-text-text">
+                    You shouldn’t be bound to use one card at a time, especially when it has so many benefits! With ZEN,
+                    you can manage your
+                    shopping and finances with both physical and virtual cards. It’s convenient, streamlined, and works
+                    like a charm. You
+                    can have a shopping card, a subscription card, and whatever other cards that make sense to you.
+                </div>
+
+                <div class="section-text-button">
+                    <div class="ApplyPay">
+                        <img src="../ZEN/img/ApplePay.png" alt="">
+                    </div>
+                    <div class="GooglePay">
+                        <img src="../ZEN/img/ApplePay.png" alt="">
+                    </div>
+                </div>
+
+            </div>
+            <div class="section4-img">
+                <img src="../ZEN/img/section5.png" alt="">
+            </div>
+        </div>
+
+        <div class="section-common">
+            <div class="section-img">
+                <img src="../ZEN/img/section6.png" alt="">
+            </div>
+
+            <div class="section-common-text">
+                <div class="section-common-text-h1">
+                    Shopping with no fees
+                </div>
+                <div class="section-common-text-text">
+                    <p>
+                        Online shopping is flawed with all kind of fees. Currency exchange fees, processing fees and
+                        even
+                        fees for having
+                        multiple fees. Getting rid of them became our hobby. Same goes for ATM withdrawal fees.
+                    </p>
+
+                    <p>
+                        Enjoy your money globally. Every uncut part of it. Keep reading. ZEN goes beyond shopping with a
+                        fully functional
+                        account.
+                    </p>
+                </div>
+            </div>
+
+        </div>
+
+        <div class="section-common">
+            <div class="section-common-text">
+                <div class="section-common-text-h1">
+                    One app, one account, many currencies
+                </div>
+                <div class="section-common-text-text">
+                    <p>
+                        ZEN Mastercard® was made for spending money. ZEN account is here to store and manage it
+                        peacefully, from the inside of
+                        your pocket.
+                    </p>
+                    <p>
+                        You can use it just like a regular account, as it has its own IBAN and works just the way any
+                        bank account would — but
+                        better. Store up to 30 currencies and transfer them easily in many ways.
+                    </p>
+                </div>
+            </div>
+            <div class="section-common-img">
+                <img src="../ZEN/img/section7.png" alt="">
+            </div>
+        </div>
+
+        <div class="section-common">
+            <div class="section-common-img">
+                <img src="../ZEN/img/section8.png" alt="">
+            </div>
+            <div class="section-common-text">
+                <div class="section-common-text-h1">
+                    Quick and easy account creation
+                </div>
+                <div class="section-common-text-text">
+                    <p>
+                        Now, you might be thinking that it’s just like any other account creation… Long, tiresome and
+                        full of endless blanks to
+                        fill in. Well, it’s not.
+                    </p>
+                    <p>
+                        We have designed the whole process to make it the simplest and the shortest one ever conceived
+                        for a personal account.
+                        Download the app and see for yourself!
+                    </p>
+                </div>
+                <div class="ZEN-section8-button">
+                    <div class="ZEN-section8-AppStore">
+                        <a href="https://www.apple.com/app-store/"><img src="../ZEN/img/AppStore(figma).png" alt=""></a>
+                    </div>
+                    <div class="ZEN-section8-AppStore">
+                        <a href="https://play.google.com/store"><img src="../ZEN/img/GoolgePlay(figma).png" alt=""></a>
+                    </div>
+                </div>
+            </div>
+        </div>
+
 
     </div>
 
