--- a/figma/ZEN/index.html
+++ b/figma/ZEN/index.html
@@ -87,50 +87,52 @@
             </div>
         </div>
 
-        <div class="sectionZEN1">
-            <div class="sectionZEN1-left">
+        <div class="section-common">
+            <div class="section-common-img">
                 <img src="../ZEN/img/section2.png" alt="">
             </div>
 
-            <div class="sectionZEN2-right">
-                <div class="sectionZEN2-right-h1">
+            <div class="section-common-text">
+                <div class="section-common-text-h1">
                     1-year warranty boost
                 </div>
-                <div class="sectionZEN2-right-text">
-                    <div class="sectionZEN2-right-text-1">
+                <div class="section-common-text-text">
+                    <p>
                         ZEN cards have a very neat feature that will help you whenever your electronic devices start
-                        failing after the standard
-                        warranty ends, which is pretty common.
-                    </div>
+                        failing after the standard warranty ends, which is pretty common.
+                    </p>
 
-                    <div class="sectionZEN2-right-text-2">
+                    <p>
                         When you buy any electronics with your ZEN shopping Mastercard®, their warranty gets extended by
-                        one year. How does it
-                        work? It simply does. Automatically.
-                    </div>
+                        one year. How does it work? It simply does. Automatically.
+                    </p>
+
+
+
+
                 </div>
             </div>
         </div>
 
-        <div class="sectionZEN3">
-            <div class="sectionZEN3-left">
-                <div class="sectionZEN3-left-h1">
+        <div class="section-common">
+            <div class="section-common-text">
+                <div class="section-common-text-h1">
                     ZEN Care
                 </div>
-                <div class="sectionZEN3-left-text1">
-                    Shopping online is usually a delightful experience. Until it's not.
-                </div>
-                <div class="sectionZEN3-left-text2">
-                    Until something you buy, proves to be faulty, missing or a totally wrong item, you’re in for long
-                    product return
-                    procedures.
-                </div>
-                <div class="sectionZEN3-left-text3">
-                    But, here comes ZEN Care: a free, built-in shopping protection. You can rest assured we’ll handle
-                    all of the
-                    transaction-related problems faster and with higher success rates. Where lone consumers can be
-                    ignored or dumped by
-                    dishonest merchants, ZEN doesn't get discouraged. ZEN persists.
+                <div class="section-common-text-text">
+                    <p>
+                        Shopping online is usually a delightful experience. Until it's not.
+                    </p>
+                    <p>
+                        Until something you buy, proves to be faulty, missing or a totally wrong item, you’re in for
+                        long product return procedures.
+                    </p>
+                    <p>
+                        But, here comes ZEN Care: a free, built-in shopping protection. You can rest assured we’ll
+                        handle all of the transaction-related problems faster and with higher success rates. Where lone
+                        consumers can be ignored or dumped by dishonest merchants, ZEN doesn't get discouraged. ZEN
+                        persists.
+                    </p>
                 </div>
             </div>
             <div class="sectionZEN3-right">
@@ -211,7 +213,7 @@
                 </div>
 
             </div>
-            <div class="section4-img">
+            <div class="section-common-img">
                 <img src="../ZEN/img/section5.png" alt="">
             </div>
         </div>
