--- a/figma/ZEN/index.html
+++ b/figma/ZEN/index.html
@@ -52,7 +52,7 @@
     </div>
 
     <div class="containerZEN">
-        <div class="sectionZEN1">
+        <div class="sectionZEN-common">
             <div class="sectionZEN1-left">
                 <div class="sectionZEN1-left-textUp">
                     <i class="far fa-play-circle"></i>
