--- a/figma/ZEN/index.html
+++ b/figma/ZEN/index.html
@@ -53,50 +53,50 @@
 
     <div class="containerZEN">
         <div class="sectionZEN-common">
-            <div class="sectionZEN1-left">
-                <div class="sectionZEN1-left-textUp">
+            <div class="sectionZEN-common-text">
+                <div class="sectionZEN-common-text-textUp">
                     <i class="far fa-play-circle"></i>
                     In every beginning, there is chaos.
                 </div>
-                <div class="sectionZEN1-left-h1">
-                    <div class="sectionZEN1-left-h1-1">
+                <div class="sectionZEN-common-text-h1">
+                    <div class="sectionZEN-common-text-h1-1">
                         Peaceful shopping.
                     </div>
 
-                    <div class="sectionZEN1-left-h1-2">
+                    <div class="sectionZEN-common-text-h1-2">
                         Mindful money.
                     </div>
 
                 </div>
 
-                <div class="sectionZEN1-left-textUnder">
+                <div class="sectionZEN-common-text-textUnder">
                     See how we can help with making your shopping experience and money management more ZEN.
                 </div>
-                <div class="sectionZEN1-left-buttonApps">
-                    <div class="sectionZEN1-left-buttonApps-AppStore">
+                <div class="sectionZEN-common-text-buttonApps">
+                    <div class="sectionZEN-common-text-buttonApps-AppStore">
                         <a href="https://www.apple.com/app-store/"><img src="../ZEN/img/AppStore(figma).png" alt=""></a>
                     </div>
-                    <div class="sectionZEN1-left-buttonApps-GooglePlay">
+                    <div class="sectionZEN-common-text-buttonApps-GooglePlay">
                         <a href="https://play.google.com/store"><img src="../ZEN/img/GoolgePlay(figma).png" alt=""></a>
 
                     </div>
                 </div>
             </div>
-            <div class="sectionZEN1-right">
+            <div class="sectionZEN-img">
                 <img src="../ZEN/img/section1.png" alt="">
             </div>
         </div>
 
-        <div class="section-common">
-            <div class="section-common-img">
+        <div class="sectionZEN-common">
+            <div class="sectionZEN-img">
                 <img src="../ZEN/img/section2.png" alt="">
             </div>
 
-            <div class="section-common-text">
-                <div class="section-common-text-h1">
+            <div class="sectionZEN-common-text">
+                <div class="sectionZEN-common-text-h1">
                     1-year warranty boost
                 </div>
-                <div class="section-common-text-text">
+                <div class="sectionZEN-common-text-text">
                     <p>
                         ZEN cards have a very neat feature that will help you whenever your electronic devices start
                         failing after the standard warranty ends, which is pretty common.
@@ -114,12 +114,12 @@
             </div>
         </div>
 
-        <div class="section-common">
-            <div class="section-common-text">
-                <div class="section-common-text-h1">
+        <div class="sectionZEN-common">
+            <div class="sectionZEN-common-text">
+                <div class="sectionZEN-common-text-h1">
                     ZEN Care
                 </div>
-                <div class="section-common-text-text">
+                <div class="sectionZEN-common-text-text">
                     <p>
                         Shopping online is usually a delightful experience. Until it's not.
                     </p>
@@ -135,7 +135,7 @@
                     </p>
                 </div>
             </div>
-            <div class="sectionZEN3-right">
+            <div class="sectionZEN-img">
                 <img src="../ZEN/img/section3.png" alt="">
             </div>
         </div>
@@ -190,12 +190,12 @@
             </div>
         </div>
 
-        <div class="section-common">
-            <div class="section-common-text">
-                <div class="section-common-text-h1">
+        <div class="sectionZEN-common">
+            <div class="sectionZEN-common-text">
+                <div class="sectionZEN-common-text-h1">
                     ZEN shopping Mastercard
                 </div>
-                <div class="section-common-text-text">
+                <div class="sectionZEN-common-text-text">
                     You shouldn’t be bound to use one card at a time, especially when it has so many benefits! With ZEN,
                     you can manage your
                     shopping and finances with both physical and virtual cards. It’s convenient, streamlined, and works
@@ -203,8 +203,8 @@
                     can have a shopping card, a subscription card, and whatever other cards that make sense to you.
                 </div>
 
-                <div class="section-text-button">
-                    <div class="ApplyPay">
+                <div class="sectionZEN-text-button">
+                    <div class="ApplePay">
                         <img src="../ZEN/img/ApplePay.png" alt="">
                     </div>
                     <div class="GooglePay">
@@ -213,21 +213,21 @@
                 </div>
 
             </div>
-            <div class="section-common-img">
+            <div class="sectionZEN-img">
                 <img src="../ZEN/img/section5.png" alt="">
             </div>
         </div>
 
-        <div class="section-common">
-            <div class="section-img">
+        <div class="sectionZEN-common">
+            <div class="sectionZEN-img">
                 <img src="../ZEN/img/section6.png" alt="">
             </div>
 
-            <div class="section-common-text">
-                <div class="section-common-text-h1">
+            <div class="sectionZEN-common-text">
+                <div class="sectionZEN-common-text-h1">
                     Shopping with no fees
                 </div>
-                <div class="section-common-text-text">
+                <div class="sectionZEN-common-text-text">
                     <p>
                         Online shopping is flawed with all kind of fees. Currency exchange fees, processing fees and
                         even
@@ -245,12 +245,12 @@
 
         </div>
 
-        <div class="section-common">
-            <div class="section-common-text">
-                <div class="section-common-text-h1">
+        <div class="sectionZEN-common">
+            <div class="sectionZEN-common-text">
+                <div class="sectionZEN-common-text-h1">
                     One app, one account, many currencies
                 </div>
-                <div class="section-common-text-text">
+                <div class="sectionZEN-common-text-text">
                     <p>
                         ZEN Mastercard® was made for spending money. ZEN account is here to store and manage it
                         peacefully, from the inside of
@@ -263,20 +263,20 @@
                     </p>
                 </div>
             </div>
-            <div class="section-common-img">
+            <div class="sectionZEN-img">
                 <img src="../ZEN/img/section7.png" alt="">
             </div>
         </div>
 
-        <div class="section-common">
-            <div class="section-common-img">
+        <div class="sectionZEN-common">
+            <div class="sectionZEN-img">
                 <img src="../ZEN/img/section8.png" alt="">
             </div>
-            <div class="section-common-text">
-                <div class="section-common-text-h1">
+            <div class="sectionZEN-common-text">
+                <div class="sectionZEN-common-text-h1">
                     Quick and easy account creation
                 </div>
-                <div class="section-common-text-text">
+                <div class="sectionZEN-common-text-text">
                     <p>
                         Now, you might be thinking that it’s just like any other account creation… Long, tiresome and
                         full of endless blanks to
