--- a/figma/ZEN/index.html
+++ b/figma/ZEN/index.html
@@ -299,6 +299,113 @@
             </div>
         </div>
 
+        <footer>
+
+
+            <div class="footerZEN-menu">
+                <div class="footerZEN-menu-common">
+                    <div class="footerZEN-menu-common-topic">
+                        Learn
+                    </div>
+                    <div class="footerZEN-menu-common-content">
+                        <ul class="footerZEN-menu-common-content-list">
+                            <li><a href="#">Help center</a></li>
+                            <li><a href="#">Join ZEN team</a></li>
+                            <li><a href="#">Privacy Policy</a></li>
+                            <li><a href="#">Cookies</a></li>
+                            <li><a href="#">Terms of use</a></li>
+                        </ul>
+                    </div>
+                </div>
+
+                <div class="footerZEN-menu-common">
+                    <div class="footerZEN-menu-common-topic">
+                        Discover
+                    </div>
+                    <div class="footerZEN-menu-common-content">
+                        <ul class="footerZEN-menu-common-content-list">
+                            <li><a href="#">For developers</a></li>
+                            <li><a href="#">Apple Pay</a></li>
+                            <li><a href="#">Google Pay</a></li>
+                        </ul>
+                    </div>
+                </div>
+
+                <div class="footerZEN-menu-common">
+                    <div class="footerZEN-menu-common-topic">
+                        Offer
+                    </div>
+                    <div class="footerZEN-menu-common-content">
+                        <ul class="footerZEN-menu-common-content-list">
+                            <li><a href="#">Business</a></li>
+                            <li><a href="#">Personal</a></li>
+                        </ul>
+                    </div>
+                </div>
+
+                <div class="footerZEN-menu-common">
+                    <div class="footerZEN-menu-common-topic">
+                        Language
+                    </div>
+                    <div class="footerZEN-menu-common-content">
+                        <ul class="footerZEN-menu-common-content-list">
+                            <li><a href="#">English</a></li>
+                            <li><a href="#">Polish</a></li>
+                        </ul>
+                    </div>
+                </div>
+
+
+                <div class="footerZEN-menu-common">
+                    <div class="footerZEN-menu-common-topic">
+                        Follow us
+                    </div>
+                    <div class="footerZEN-menu-common-content">
+                        <div class="footerZEN-menu-common-content-img">
+                            <img src="../ZEN/img/ZEN-footer-IN.png" alt="">
+                        </div>
+
+                    </div>
+                </div>
+
+                <div class="footerZEN-menu-common">
+                    <div class="footerZEN-menu-common-topic">
+                        Contact
+                    </div>
+                    <div class="footerZEN-menu-common-content">
+                        <div class="footerZEN-menu-common-content-email">
+                            hello@zen.com
+                        </div>
+                    </div>
+                </div>
+
+
+
+
+            </div>
+
+            <div class="footerZEN-long-img">
+                <img src="../ZEN/img/ZEN-zero-effort.png" alt="">
+            </div>
+
+
+            <div class="footerZEN-under">
+                <div class="footerZEN-under-text">
+                    ZEN.COM is a licensed financial institution under the supervision of the Central Bank of Lithuania
+                    approved by European Banking Authority for 31 countries. Registration number of the company
+                    304749651,
+                    VAT ID LT100011714916. License of electronic money institutions number LB000457. Share capital
+                    2.185.000,00 EUR. Company address: Mėsinių g. 5, LT-01133, Vilnius, Lithuania. Sales Office: ul.
+                    Emilii
+                    Plater 53, 00-113 Warsaw, Poland.
+                </div>
+                <div class="footerZEN-under-img">
+                    <img src="../ZEN/img/ZEN-img-in-footer.png" alt="">
+                </div>
+            </div>
+
+        </footer>
+
 
     </div>
 
