--- a/figma/ZEN/index.html
+++ b/figma/ZEN/index.html
@@ -301,6 +301,10 @@
 
         <footer>
 
+            <div class="footer-line">
+
+            </div>
+
 
             <div class="footerZEN-menu">
                 <div class="footerZEN-menu-common">
