--- a/figma/ZEN/index.html
+++ b/figma/ZEN/index.html
@@ -5,14 +5,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+
+    
     <link rel="stylesheet" href="../SOS/css/all.css">
     <link rel="stylesheet" href="../../css/style.css">
     <title>ZEN</title>
 </head>
 
-<body>
+<body>    
+
     <div class="containerZEN">
-        <header class="headerZEN">
+        <header class="headerZEN" id="up">
 
             <div class="headerZEN-LEFT">
                 <div class="headerZEN-LEFT-img">
@@ -412,6 +416,15 @@
 
 
     </div>
+
+    <a href="#up" class="pageup">
+        <img src="../ZEN/img/up.svg" alt="" class="pageup">
+    </a>
+
+    <script src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
+    <script src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+
+    <script src="../../js/up.js"></script>
 
 
 
